test/should-fail/检查返回值-3.j
function test takes nothing returns integer
    if true then
        return 0
        return 0
    endif
endfunction